--- a/css/styles.css
+++ b/css/styles.css
@@ -1,83 +1,109 @@
-@import url(styles/normalize.css);
-: 0;
-  font-family: Montserrat, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; }
+@import url(/styles/normalize.css);
+.wrapper {
+  width: 100%;
+  max-width: 864px;
+  margin: 0 auto; }
 
-a {
-  color: inherit;
-  text-decoration: none; }
+.header {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #242635;
+  position: relative; }
+  @media (max-width: 600px) {
+    .header {
+      padding-top: 44px;
+      padding-bottom: 230px; } }
+  @media (max-width: 320px) {
+    .header {
+      padding-bottom: 52px; } }
+  .header .list {
+    display: flex;
+    gap: 28px;
+    padding-top: 70px;
+    padding-bottom: 144px;
+    padding-right: 77px;
+    justify-content: flex-end; }
+    @media (max-width: 768px) {
+      .header .list {
+        padding-top: 43px;
+        padding-bottom: 230px;
+        gap: 30px; } }
+    @media (max-width: 600px) {
+      .header .list {
+        display: none; } }
+  .header .sm-screen {
+    display: none; }
+    @media (max-width: 600px) {
+      .header .sm-screen {
+        display: flex;
+        position: absolute;
+        top: 0;
+        right: 30px;
+        padding-bottom: 52px;
+        padding-top: 10px; } }
 
-* {
-  box-sizing: border-box; }
+.main .title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 90px;
+  color: #242635;
+  letter-spacing: -2px;
+  text-align: center; }
+  @media (max-width: 768px) {
+    .main .title {
+      font-size: 72px;
+      letter-spacing: -1.6px; } }
+  @media (max-width: 320px) {
+    .main .title {
+      font-size: 36px;
+      letter-spacing: -0.8px; } }
 
-*:where(
-:not(html, iframe, canvas, img, svg, video, audio):not(svg, symbol)
-) {
-  all: unset;
-  display: revert; }
+.main .description {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  color: #242635;
+  line-height: 33px;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 47px; }
+  @media (max-width: 768px) {
+    .main .description {
+      padding-top: 22px;
+      padding-bottom: 45px; } }
+  @media (max-width: 320px) {
+    .main .description {
+      font-size: 12px;
+      line-height: 18px;
+      margin-right: 52px;
+      margin-left: 52px; } }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box; }
+.main .background {
+  background-image: url("../assets/image-1440.png");
+  background-size: cover;
+  height: 328px;
+  background-repeat: no-repeat; }
+  @media (max-width: 768px) {
+    .main .background {
+      background-image: url("../assets/image-middle.png");
+      height: 512px; } }
+  @media (max-width: 320px) {
+    .main .background {
+      background-image: url("../assets/image-small.png");
+      height: 284px; } }
 
-a,
-button {
-  cursor: pointer;
-  outline: none; }
+@media screen and (max-width: 863px) {
+  .wrapper {
+    padding-right: 20px;
+    padding-left: 20px; } }
 
-ol,
-ul,
-menu {
-  list-style: none; }
+@media screen and (max-width: 768px) {
+  .wrapper {
+    padding-left: 76px;
+    padding-right: 76px; } }
 
-img {
-  max-width: 100%; }
-
-input,
-textarea {
-  -webkit-user-select: auto; }
-
-textarea {
-  white-space: revert; }
-
-meter {
-  -webkit-appearance: revert;
-  appearance: revert; }
-
-::placeholder {
-  color: unset; }
-
-:where([hidden]) {
-  display: none; }
-
-:where([contenteditable]:not([contenteditable='false'])) {
-  -moz-user-modify: read-write;
-  -webkit-user-modify: read-write;
-  overflow-wrap: break-word;
-  -webkit-line-break: after-white-space;
-  -webkit-user-select: auto; }
-
-:where([draggable='true']) {
-  -webkit-user-drag: element; }
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  transition: background-color 5000s ease-in-out 0s; }
-
-::-webkit-scrollbar {
-  width: 7px; }
-
-/*/ Track /*/
-::-webkit-scrollbar-track {
-  background: transparent; }
-
-/*/ Handle /*/
-::-webkit-scrollbar-thumb {
-  background: #6b7c8a;
-  border-radius: 10px; }
-
-/*/ Handle on hover /*/
-::-webkit-scrollbar-thumb:hover {
-  background: #6b7c8a; }
+@media screen and (max-width: 320px) {
+  .wrapper {
+    padding-left: 32px;
+    padding-right: 32px; } }
