--- a/css/styles.css
+++ b/css/styles.css
@@ -1,83 +1,193 @@
-@import url(styles/normalize.css);
-: 0;
-  font-family: Montserrat, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; }
+@import url(../styles/normalize.css);
+html, body {
+  height: 100%; }
 
-a {
-  color: inherit;
-  text-decoration: none; }
+.wrapper {
+  width: 100%;
+  min-width: 300px;
+  margin: 0 auto;
+  padding: 0 10px; }
 
-* {
-  box-sizing: border-box; }
+.header {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #000000;
+  letter-spacing: 0.5em;
+  padding-top: 18px;
+  padding-bottom: 18px; }
+  @media (min-width: 768px) {
+    .header {
+      padding-bottom: 68px; } }
+  @media (min-width: 1170px) {
+    .header {
+      padding-top: 38px;
+      padding-bottom: 38px; } }
 
-*:where(
-:not(html, iframe, canvas, img, svg, video, audio):not(svg, symbol)
-) {
-  all: unset;
-  display: revert; }
+.title {
+  font-family: 'Red Hat Display', sans-serif;
+  font-weight: 600;
+  font-size: 30px;
+  color: #000000;
+  letter-spacing: 0.05em;
+  padding-bottom: 40px; }
+  @media (min-width: 768px) {
+    .title {
+      font-size: 33px;
+      padding-bottom: 50px; } }
+  @media (min-width: 1170px) {
+    .title {
+      font-size: 48px;
+      padding-bottom: 70px; } }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box; }
+.subtitle {
+  font-family: 'Red Hat Display', sans-serif;
+  font-weight: 600;
+  font-size: 26px;
+  color: #000000;
+  letter-spacing: 0.1em;
+  line-height: 43px;
+  padding-top: 70px;
+  padding-bottom: 40px; }
+  @media (min-width: 768px) {
+    .subtitle {
+      font-size: 28px;
+      padding-top: 90px;
+      padding-bottom: 50px; } }
 
-a,
-button {
-  cursor: pointer;
-  outline: none; }
+.description {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #565656;
+  line-height: 32px;
+  letter-spacing: 0.05em;
+  padding-top: 20px; }
+  @media (min-width: 768px) {
+    .description {
+      font-size: 19px; } }
 
-ol,
-ul,
-menu {
-  list-style: none; }
+.project-overview .description {
+  padding-top: 0; }
 
-img {
-  max-width: 100%; }
+.final-design .description {
+  padding-bottom: 70px; }
+  @media (min-width: 768px) {
+    .final-design .description {
+      padding-bottom: 90px; } }
 
-input,
-textarea {
-  -webkit-user-select: auto; }
+picture {
+  width: 100%;
+  height: 100%;
+  display: flex; }
+  picture img {
+    object-fit: cover;
+    height: auto;
+    width: 100%; }
 
-textarea {
-  white-space: revert; }
+.footer {
+  background-color: #F4F4F4;
+  padding-top: 50px;
+  padding-bottom: 50px; }
+  @media (min-width: 1170px) {
+    .footer {
+      padding-top: 70px;
+      padding-bottom: 30px; } }
+  @media (min-width: 1170px) {
+    .footer .content {
+      display: flex;
+      justify-content: space-between;
+      padding-bottom: 26px; } }
+  .footer .content__leftScreen {
+    text-align: center; }
+    @media (min-width: 1170px) {
+      .footer .content__leftScreen {
+        text-align: left; } }
+    .footer .content__leftScreen .title-footer {
+      font-family: 'Red Hat Display', sans-serif;
+      font-weight: 400;
+      font-size: 32px;
+      color: #000000;
+      letter-spacing: 0.05em; }
+      @media (min-width: 768px) {
+        .footer .content__leftScreen .title-footer {
+          font-size: 48px; } }
+    .footer .content__leftScreen .contacts {
+      font-family: 'Lato', sans-serif;
+      font-weight: 400;
+      font-size: 18px;
+      color: #000000;
+      line-height: 30px;
+      letter-spacing: 0.1em;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      padding-top: 20px;
+      cursor: pointer; }
+      @media (min-width: 768px) {
+        .footer .content__leftScreen .contacts {
+          font-size: 16px; } }
+      @media (min-width: 1170px) {
+        .footer .content__leftScreen .contacts {
+          padding-top: 30px; } }
+  .footer .content__rightScreen {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    justify-content: center;
+    display: flex;
+    gap: 23px; }
+    @media (min-width: 768px) {
+      .footer .content__rightScreen {
+        padding-top: 51px; } }
+    .footer .content__rightScreen .right-content__svg {
+      cursor: pointer; }
+      .footer .content__rightScreen .right-content__svg:hover {
+        background-color: #565656; }
+        .footer .content__rightScreen .right-content__svg:hover .fill {
+          fill: #FFFFFF; }
+  .footer__copyright {
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    line-height: 27px;
+    letter-spacing: 0.1em;
+    text-align: center; }
+    @media (min-width: 768px) {
+      .footer__copyright {
+        font-size: 12px; } }
 
-meter {
-  -webkit-appearance: revert;
-  appearance: revert; }
+@media screen and (max-width: 1440px) {
+  .wrapper {
+    padding-left: 135px;
+    padding-right: 135px; } }
 
-::placeholder {
-  color: unset; }
+@media screen and (max-width: 1300px) {
+  .wrapper {
+    padding-left: 90px;
+    padding-right: 90px; } }
 
-:where([hidden]) {
-  display: none; }
+@media screen and (max-width: 1170px) {
+  .wrapper {
+    padding-left: 60px;
+    padding-right: 60px; } }
 
-:where([contenteditable]:not([contenteditable='false'])) {
-  -moz-user-modify: read-write;
-  -webkit-user-modify: read-write;
-  overflow-wrap: break-word;
-  -webkit-line-break: after-white-space;
-  -webkit-user-select: auto; }
+@media screen and (max-width: 1000px) {
+  .wrapper {
+    padding-left: 40px;
+    padding-right: 40px; } }
 
-:where([draggable='true']) {
-  -webkit-user-drag: element; }
+@media screen and (max-width: 768px) {
+  .wrapper {
+    padding-left: 34px;
+    padding-right: 34px; } }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  transition: background-color 5000s ease-in-out 0s; }
+@media screen and (max-width: 550px) {
+  .wrapper {
+    padding-left: 17px;
+    padding-right: 17px; } }
 
-::-webkit-scrollbar {
-  width: 7px; }
-
-/*/ Track /*/
-::-webkit-scrollbar-track {
-  background: transparent; }
-
-/*/ Handle /*/
-::-webkit-scrollbar-thumb {
-  background: #6b7c8a;
-  border-radius: 10px; }
-
-/*/ Handle on hover /*/
-::-webkit-scrollbar-thumb:hover {
-  background: #6b7c8a; }
+@media screen and (max-width: 400px) {
+  .wrapper {
+    padding-left: 10px;
+    padding-right: 10px; } }
