--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,2 +1,245 @@
-@import "styles/normalize.css";
+@import "../styles/normalize.css";
+@import "./mixins";
+@import "./variables";
+@import "./responsive";
+
+html, body {
+  height: 100%;
+}
+
+.wrapper {
+  width: 100%;
+  min-width: 300px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.header {
+  @include latoFonts(16px, $base-black);
+  letter-spacing: 0.5em;
+  padding-top: 18px;
+  padding-bottom: 18px;
+
+  @include md {
+    padding-bottom: 68px;
+  }
+
+  @include xl {
+    padding-top: 38px;
+    padding-bottom: 38px;
+  }
+}
+
+.title {
+  @include redHatDisplayFonts(30px, 600);
+  letter-spacing: 0.05em;
+  padding-bottom: 40px;
+
+  @include md {
+    font-size: 33px;
+    padding-bottom: 50px;
+  }
+
+  @include xl {
+    font-size: 48px;
+    padding-bottom: 70px;
+  }
+}
+
+.subtitle {
+  @include redHatDisplayFonts(26px, 600);
+  letter-spacing: 0.1em;
+  line-height: 43px;
+  padding-top: 70px;
+  padding-bottom: 40px;
+
+  @include md {
+    font-size: 28px;
+    padding-top: 90px;
+    padding-bottom: 50px;
+  }
+}
+
+.description {
+  @include latoFonts(16px, $gray-700);
+  line-height: 32px;
+  letter-spacing: 0.05em;
+  padding-top: 20px;
+
+  @include md {
+    font-size: 19px;
+  }
+}
+
+.project-overview {
+  .description {
+    padding-top: 0;
+  }
+}
+
+.final-design {
+  .description {
+    padding-bottom: 70px;
+
+    @include md {
+      padding-bottom: 90px;
+    }
+  }
+}
+
+picture {
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+  img {
+    object-fit: cover;
+    height: auto;
+    width: 100%;
+  }
+}
+
+
+.footer {
+  background-color: $bg-footer;
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  @include xl {
+    padding-top: 70px;
+    padding-bottom: 30px;
+  }
+
+  .content {
+    @include xl {
+      display: flex;
+      justify-content: space-between;
+      padding-bottom: 26px;
+    }
+
+    &__leftScreen {
+      text-align: center;
+
+      @include xl {
+        text-align: left;
+      }
+
+      .title-footer {
+        @include redHatDisplayFonts(32px, 400);
+        letter-spacing: 0.05em;
+
+        @include md {
+          font-size: 48px;
+        }
+      }
+
+      .contacts {
+        @include latoFonts(18px, $base-black);
+        line-height: 30px;
+        letter-spacing: 0.1em;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        padding-top: 20px;
+        cursor: pointer;
+
+        @include md {
+          font-size: 16px;
+        }
+
+        @include xl {
+          padding-top: 30px;
+        }
+      }
+    }
+
+    &__rightScreen {
+      padding-top: 40px;
+      padding-bottom: 40px;
+      justify-content: center;
+      display: flex;
+      gap: 23px;
+
+      @include md {
+        padding-top: 51px;
+      }
+
+      .right-content {
+
+        &__svg {
+          cursor: pointer;
+
+          &:hover {
+            background-color: $gray-700;
+
+            .fill {
+              fill: $base-white;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &__copyright {
+    @include latoFonts(16px, $base-black);
+    line-height: 27px;
+    letter-spacing: 0.1em;
+    text-align: center;
+
+    @include md {
+      font-size: 12px;
+    }
+  }
+}
+
+
+@media screen and(max-width: 1440px) {
+  .wrapper {
+    padding-left: 135px;
+    padding-right: 135px;
+  }
+}
+
+@media screen and(max-width: 1300px) {
+  .wrapper {
+    padding-left: 90px;
+    padding-right: 90px;
+  }
+}
+
+@media screen and(max-width: 1170px) {
+  .wrapper {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+}
+
+@media screen and(max-width: 1000px) {
+  .wrapper {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+@media screen and(max-width: 768px) {
+  .wrapper {
+    padding-left: 34px;
+    padding-right: 34px;
+  }
+}
+
+@media screen and(max-width: 550px) {
+  .wrapper {
+    padding-left: 17px;
+    padding-right: 17px;
+  }
+}
+
+@media screen and(max-width: 400px) {
+  .wrapper {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 
