--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url(../styles/normalize.css);
+@import url(_hamburger.css);
 @use "fonts";
 @font-face {
   font-family: 'Lato';
@@ -118,119 +119,63 @@ html {
   color: #000000;
   letter-spacing: 0.05em; }
 
-.nav {
+.header {
+  height: 100px;
   display: flex;
   justify-content: space-between;
-  padding-top: 44px;
-  padding-bottom: 44px; }
-  @media (max-width: 849px) {
-    .nav {
-      padding-top: 32px;
-      padding-bottom: 32px; } }
+  align-items: center;
+  position: relative; }
+
+.nav {
+  display: flex;
+  gap: 42px; }
   @media (max-width: 768px) {
     .nav {
-      padding-top: 24px;
-      padding-bottom: 24px; } }
-  .nav__menu {
-    display: flex;
-    gap: 84px;
-    align-items: center;
+      position: absolute;
+      left: 0;
+      top: 100%;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      background-color: #FFFFFF;
+      gap: 0;
+      display: none; }
+      .nav.is-active {
+        display: flex; } }
+  .nav__item {
     cursor: pointer; }
     @media (max-width: 768px) {
-      .nav__menu {
-        gap: 41px;
-        align-items: flex-end; } }
-    @media (min-width: 320px) and (max-width: 600px) {
-      .nav__menu {
-        gap: 20px; } }
-    .nav__menu .list {
+      .nav__item {
+        padding-top: 20px;
+        padding-bottom: 20px; } }
+    .nav__item__link {
       font-family: 'Lato', sans-serif;
       font-weight: 400;
       font-size: 14px;
       color: #000000;
       letter-spacing: 0.3em;
-      text-transform: uppercase;
-      display: flex;
-      gap: 42px; }
-      @media (max-width: 849px) {
-        .nav__menu .list {
-          display: none; } }
-      .nav__menu .list__item:hover {
-        border-bottom: 1px solid #000000; }
-  .nav__search:hover {
-    opacity: .5; }
-  .nav__hamburger {
-    width: 0;
-    height: 0;
-    opacity: 0;
-    position: absolute;
-    z-index: -100; }
-    @media (max-width: 849px) {
-      .nav__hamburger {
-        width: 34px;
-        height: 20px;
-        opacity: 1;
-        z-index: 1;
-        cursor: pointer;
-        position: relative; }
-        .nav__hamburger .check-menu {
-          cursor: pointer;
-          width: 40px;
-          height: 30px;
-          opacity: 0;
-          z-index: -100; }
-          .nav__hamburger .check-menu:checked ~ .main-menu {
-            max-height: 500px;
-            font-size: 16px; }
-          .nav__hamburger .check-menu:checked ~ .first {
-            display: none; }
-          .nav__hamburger .check-menu:checked ~ .second {
-            transform: rotate(45deg); }
-          .nav__hamburger .check-menu:checked ~ .third {
-            transform: rotate(-45deg); }
-          .nav__hamburger .check-menu:checked ~ .fourth {
-            display: none; }
-        .nav__hamburger .burger-line {
-          position: absolute;
-          top: -3px;
-          right: 0;
-          width: 34px;
-          height: 2px;
-          background: #000000; }
-        .nav__hamburger .second, .nav__hamburger .third {
-          top: 6px; }
-        .nav__hamburger .fourth {
-          top: 15px; }
-        .nav__hamburger .main-menu {
-          cursor: pointer;
-          display: block;
-          position: absolute;
-          bottom: 0;
-          right: 0;
-          transform: translateY(100%);
-          text-align: center;
-          margin-bottom: -10px;
-          max-height: 0;
-          font-size: 0;
-          overflow: hidden;
-          transition: .5s all; }
-          .nav__hamburger .main-menu a {
-            font-family: 'Lato', sans-serif;
-            font-weight: 400;
-            font-size: 14px;
-            color: #000000;
-            letter-spacing: 0.3em;
-            text-transform: uppercase;
-            cursor: pointer;
-            display: block;
-            width: 300px;
-            padding: 10px;
-            color: #000000;
-            text-decoration: none;
-            border-top: 1px solid #000000;
-            background-color: white; }
-            .nav__hamburger .main-menu a:hover {
-              background-color: #CCCCCC; } }
+      text-transform: uppercase; }
+    .nav__item:hover .nav__item__link {
+      text-decoration: underline; }
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+  padding: 0;
+  opacity: 0;
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: -100; }
+  @media (max-width: 768px) {
+    .hamburger {
+      display: none;
+      cursor: pointer;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      z-index: 1;
+      opacity: 1; } }
 
 .first-screen {
   background-image: url("../assets/bg-image.svg");
@@ -616,29 +561,3 @@ html {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   background-color: #101010; }
-
-@media only screen and (max-width: 768px) {
-  .list {
-    position: fixed;
-    left: -100%;
-    top: 5rem;
-    flex-direction: column;
-    background-color: #fff;
-    width: 100%;
-    border-radius: 10px;
-    text-align: center;
-    transition: 0.3s;
-    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05); }
-  .list.active {
-    left: 0; }
-  .list__item {
-    margin: 2.5rem 0; }
-  .hamburger {
-    display: block;
-    cursor: pointer; }
-  .hamburger.active .bar:nth-child(2) {
-    opacity: 0; }
-  .hamburger.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg); }
-  .hamburger.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg); } }
