--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 @import "./variables";
 @import "./responsive";
 @import "fonts";
+@import "_hamburger.css";
 
 
 html {
@@ -59,166 +60,240 @@ html {
   letter-spacing: 0.05em;
 }
 
+.header {
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
 
 .nav {
   display: flex;
-  justify-content: space-between;
-  padding-top: 44px;
-  padding-bottom: 44px;
-
-  @include cwd(849px) {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
+  gap: 42px;
 
   @include md {
-    padding-top: 24px;
-    padding-bottom: 24px;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: $base-white;
+    gap: 0;
+    display: none;
+
+    &.is-active {
+      display: flex;
+    }
   }
 
-  &__menu {
-    display: flex;
-    gap: 84px;
-    align-items: center;
+  &__item {
     cursor: pointer;
 
     @include md {
-      gap: 41px;
-      align-items: flex-end;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
 
-    @include sm {
-      gap: 20px;
-    }
-
-
-    .list {
+    &__link {
       @include latoFonts(14px, $base-black, 400);
       letter-spacing: 0.3em;
       text-transform: uppercase;
-      display: flex;
-      gap: 42px;
-
-      @include cwd(849px) {
-        display: none;
-      }
-
-      &__item {
-
-        &:hover {
-          border-bottom: 1px solid $base-black;
-        }
-      }
     }
-  }
 
-  &__search {
     &:hover {
-      opacity: .5;
-    }
-  }
-
-  &__hamburger {
-    width: 0;
-    height: 0;
-    opacity: 0;
-    position: absolute;
-    z-index: -100;
-
-    @include cwd(849px) {
-      width: 34px;
-      height: 20px;
-      opacity: 1;
-      z-index: 1;
-      cursor: pointer;
-      position: relative;
-
-      .check-menu {
-        cursor: pointer;
-        width: 40px;
-        height: 30px;
-        opacity: 0;
-        z-index: -100;
-
-        &:checked ~ .main-menu {
-          max-height: 500px;
-          font-size: 16px;
-        }
-
-        &:checked ~ .first {
-          display: none;
-        }
-
-        &:checked ~ .second {
-          transform: rotate(45deg);
-        }
-
-        &:checked ~ .third {
-          transform: rotate(-45deg);
-        }
-
-        &:checked ~ .fourth {
-          display: none;
-        }
+      .nav__item__link {
+        text-decoration: underline;
       }
-
-      label {
-      }
-
-      .burger-line {
-        position: absolute;
-        top: -3px;
-        right: 0;
-        width: 34px;
-        height: 2px;
-        background: $base-black;
-      }
-
-      .second, .third {
-        top: 6px;
-      }
-
-      .fourth {
-        top: 15px;
-      }
-
-      .main-menu {
-        cursor: pointer;
-        display: block;
-        position: absolute;
-        //width: 100%;
-        bottom: 0;
-        right: 0;
-        transform: translateY(100%);
-        text-align: center;
-        margin-bottom: -10px;
-        max-height: 0;
-        font-size: 0;
-        overflow: hidden;
-        transition: .5s all;
-
-        a {
-          @include latoFonts(14px, $base-black, 400);
-          letter-spacing: 0.3em;
-          text-transform: uppercase;
-          cursor: pointer;
-          display: block;
-          width: 300px;
-          padding: 10px;
-          color: $base-black;
-          text-decoration: none;
-          border-top: 1px solid $base-black;
-          background-color: rgba(255, 255, 255, 1);
-
-          &:hover {
-            background-color: #CCCCCC;
-          }
-        }
-      }
-
     }
   }
 }
+
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+  padding: 0;
+  opacity: 0;
+  width: 0;
+  height: 0;
+  position: absolute;
+  z-index: -100;
+
+  @include md {
+    display: none;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+    opacity: 1;
+  }
+}
+
+
+//
+//.nav {
+//  display: flex;
+//  justify-content: space-between;
+//  padding-top: 44px;
+//  padding-bottom: 44px;
+//
+//  @include cwd(849px) {
+//    padding-top: 32px;
+//    padding-bottom: 32px;
+//  }
+//
+//  @include md {
+//    padding-top: 24px;
+//    padding-bottom: 24px;
+//  }
+//
+//  &__menu {
+//    display: flex;
+//    gap: 84px;
+//    align-items: center;
+//    cursor: pointer;
+//
+//    @include md {
+//      gap: 41px;
+//      align-items: flex-end;
+//    }
+//
+//    @include sm {
+//      gap: 20px;
+//    }
+//
+//
+//    .list {
+//      @include latoFonts(14px, $base-black, 400);
+//      letter-spacing: 0.3em;
+//      text-transform: uppercase;
+//      display: flex;
+//      gap: 42px;
+//
+//      @include cwd(849px) {
+//        display: none;
+//      }
+//
+//      &__item {
+//
+//        &:hover {
+//          border-bottom: 1px solid $base-black;
+//        }
+//      }
+//    }
+//  }
+//
+//  &__search {
+//    &:hover {
+//      opacity: .5;
+//    }
+//  }
+//
+//  &__hamburger {
+//    width: 0;
+//    height: 0;
+//    opacity: 0;
+//    position: absolute;
+//    z-index: -100;
+//
+//    @include cwd(849px) {
+//      width: 34px;
+//      height: 20px;
+//      opacity: 1;
+//      z-index: 1;
+//      cursor: pointer;
+//      position: relative;
+//
+//      .check-menu {
+//        cursor: pointer;
+//        width: 40px;
+//        height: 30px;
+//        opacity: 0;
+//        z-index: -100;
+//
+//        &:checked ~ .main-menu {
+//          max-height: 500px;
+//          font-size: 16px;
+//        }
+//
+//        &:checked ~ .first {
+//          display: none;
+//        }
+//
+//        &:checked ~ .second {
+//          transform: rotate(45deg);
+//        }
+//
+//        &:checked ~ .third {
+//          transform: rotate(-45deg);
+//        }
+//
+//        &:checked ~ .fourth {
+//          display: none;
+//        }
+//      }
+//
+//      label {
+//      }
+//
+//      .burger-line {
+//        position: absolute;
+//        top: -3px;
+//        right: 0;
+//        width: 34px;
+//        height: 2px;
+//        background: $base-black;
+//      }
+//
+//      .second, .third {
+//        top: 6px;
+//      }
+//
+//      .fourth {
+//        top: 15px;
+//      }
+//
+//      .main-menu {
+//        cursor: pointer;
+//        display: block;
+//        position: absolute;
+//        //width: 100%;
+//        bottom: 0;
+//        right: 0;
+//        transform: translateY(100%);
+//        text-align: center;
+//        margin-bottom: -10px;
+//        max-height: 0;
+//        font-size: 0;
+//        overflow: hidden;
+//        transition: .5s all;
+//
+//        a {
+//          @include latoFonts(14px, $base-black, 400);
+//          letter-spacing: 0.3em;
+//          text-transform: uppercase;
+//          cursor: pointer;
+//          display: block;
+//          width: 300px;
+//          padding: 10px;
+//          color: $base-black;
+//          text-decoration: none;
+//          border-top: 1px solid $base-black;
+//          background-color: rgba(255, 255, 255, 1);
+//
+//          &:hover {
+//            background-color: #CCCCCC;
+//          }
+//        }
+//      }
+//
+//    }
+//  }
+//}
 
 
 .first-screen {
@@ -741,50 +816,6 @@ html {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   background-color: #101010;
-}
-
-@media only screen and (max-width: 768px) {
-  .list {
-    position: fixed;
-    left: -100%;
-    top: 5rem;
-    flex-direction: column;
-    background-color: #fff;
-    width: 100%;
-    border-radius: 10px;
-    text-align: center;
-    transition: 0.3s;
-    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
-  }
-
-  .list.active {
-    left: 0;
-  }
-
-  .list__item {
-    margin: 2.5rem 0;
-  }
-
-  .hamburger {
-    display: block;
-    cursor: pointer;
-  }
-
-  .hamburger.active {
-    .bar:nth-child(2) {
-      opacity: 0;
-    }
-  }
-  .hamburger.active {
-    .bar:nth-child(1) {
-      transform: translateY(8px) rotate(45deg);
-    }
-  }
-  .hamburger.active {
-    .bar:nth-child(3) {
-      transform: translateY(-8px) rotate(-45deg);
-    }
-  }
 }
 
 
