--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,7 @@ html, body {
   padding: 0 10px;
 }
 
+
 .header {
   @include latoFonts(16px, $base-black);
   letter-spacing: 0.5em;
@@ -29,6 +30,7 @@ html, body {
     padding-bottom: 38px;
   }
 }
+
 
 .title {
   @include redHatDisplayFonts(30px, 600);
@@ -74,6 +76,10 @@ html, body {
 .project-overview {
   .description {
     padding-top: 0;
+
+    @include xl {
+      max-width: 570px;
+    }
   }
 }
 
