--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -676,7 +676,7 @@ body {
       grid-row-gap: 60px;
       grid-column-gap: 60px;
       width: 100%;
-      background-color: rgba(187,188,193, .2);
+      background-color: rgba(187, 188, 193, .2);
 
     }
     @include cwd(784px) {
@@ -997,6 +997,10 @@ body {
           @include fontsPlayfair(italic, 18px, 20px);
           letter-spacing: 0.08em;
           opacity: 0.5;
+        }
+
+        &:hover {
+          border-bottom: 1px solid $red;
         }
 
         &:focus {
