--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,2 +1,23 @@
+.red {
+  background-color: red;
+  width: 200px;
+  height: 200px;
 
+  .blue {
+    background-color: blue;
+    width: 150px;
+    height: 150px;
 
+    .yellow {
+      background-color: yellow;
+      width: 100px;
+      height: 100px;
+    }
+  }
+}
+
+.square {
+  background-color: black;
+  width: 100px;
+  height: 100px;
+}
