--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,18 @@
   background-color: black;
   width: 100px;
   height: 100px; }
+
+.grandparent {
+  padding: 20px;
+  display: inline-block;
+  background-color: purple; }
+
+.parent {
+  padding: 20px;
+  background-color: blue;
+  display: inline-block; }
+
+.child {
+  width: 50px;
+  height: 50px;
+  background-color: red; }
