--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,3 +21,23 @@
   width: 100px;
   height: 100px;
 }
+
+
+.grandparent {
+  padding: 20px;
+  display: inline-block;
+  background-color: purple;
+
+}
+
+.parent {
+  padding: 20px;
+  background-color: blue;
+  display: inline-block;
+
+}
+.child {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+}
