--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,22 +1,20 @@
-//.grandparent {
-//  padding: 40px;
-//  display: inline-block;
-//  background-color: purple;
-//
-//}
-//
-//.parent {
-//  padding: 40px;
-//  background-color: blue;
-//  display: inline-block;
-//
-//}
-//
-//.child {
-//  width: 50px;
-//  height: 50px;
-//  background-color: red;
-//}
+.progressBar {
+  display: flex;
+  gap: 20px;
+
+  .bar {
+    width: 300px;
+    height: 40px;
+  }
+
+  .btn {
+    cursor: pointer;
+    padding: 10px 20px;
+    font-weight: 600;
+  }
+
+}
+
 
 .wrapper {
   width: 100%;
@@ -49,6 +47,7 @@
 // завдання друге
 .table {
   padding-top: 50px;
+
   .title {
     background-color: #8599ad;
     font-size: 20px;
@@ -65,16 +64,47 @@
 
 
 // завдання третє
+
 .taskThree {
-  &__text {
-    max-width: 500px;
-    border: 2px solid darkred;
-    padding: 20px;
-    font-family: 'Sigmar', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
+  margin-top: 50px;
+  margin-bottom: 100px;
+
+  .border {
+    background: #8599ad;
+    border: 3px solid #537493;
+    width: 200px;
+    height: 200px;
+    position: relative;
+    max-width: calc(100% - 20px);
+    max-height: calc(100% - 20px);
+
+    .text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-family: 'Sigmar', sans-serif;
+      font-weight: 700;
+    }
+
+    .resize-circle {
+      position: absolute;
+      bottom: -5px;
+      right: -5px;
+      cursor: nwse-resize;
+      border: 1px solid #537493;
+      border-radius: 50%;
+      width: 10px;
+      height: 10px;
+      background-color: #537493;
+
+      &:hover {
+        opacity: .5;
+      }
+    }
   }
 }
+
 
 @media screen and(max-width: 1199px) {
   .wrapper {
